--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <button onclick="showForm()" id="form--button">Add new book</button>
+    <form id="form" action="" method="post" style="display: none;">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title">
+        <label for="author">Author</label>
+        <input type="text" name="author" id="author">
+        <label for="pages">No. of Pages</label>
+        <input type="text" name="pages" id="pages">
+        <label for="read">Read:</label>
+        <input type="radio" name="read" id="read">
+        <button id="submit-btn" type="submit">Submit</button>
+    </form>
 </body>
 </html>
