--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="script.js" defer></script>
     <title>Library</title>
 </head>
 <body>
-    <div id="root"></div>
-    <button onclick="showForm()" id="form--button">Add new book</button>
     <form id="form" action="" method="post" style="display: none;">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title">
-        <label for="author">Author</label>
-        <input type="text" name="author" id="author">
-        <label for="pages">No. of Pages</label>
-        <input type="text" name="pages" id="pages">
-        <label for="read">Read:</label>
-        <input type="radio" name="read" id="read">
+        <div class="form--element">
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title" required>
+        </div>
+        <div class="form--element">
+            <label for="author">Author</label>
+            <input type="text" name="author" id="author" required>
+        </div>
+        <div class="form--element">
+            <label for="pages">No. of Pages</label>
+            <input type="number" name="pages" id="pages" required>
+        </div>
+        <div class="form--element">
+            <label for="read">Read:</label>
+            <input type="checkbox" name="read" id="read" required>
+        </div>
         <button id="submit-btn" type="submit">Submit</button>
     </form>
+    <div id="warn"></div>
+    <div id="root"></div>
+    <div><button onclick="showForm()" id="form--button">Add new book</button></div>
 </body>
 </html>
